# unliftio-messagebox

./: .gitignore  CI-BUILD.sh  LICENSE  README.md  TODO.md  benchmark-bounded-vs-unbounded-1000-1.html  benchmark-bounded-vs-unbounded.html  benchmark-single-core.html  benchmark.nix  bounded-chan.bench  cabal.project  commit-generated-reports.sh  default.nix  generate-benchmark-report.nix  generate-benchmark-report.sh  generate-benchmarks-report.sh  generate-benchmarks.sh  generate-haddock-report.sh  generate-memleak-test-report.nix  generate-memleak-test-report.sh  generate-messagebox-memleak-test-report.nix  generate-messagebox-memleak-test-report.sh  generate-module-graph.nix  generate-module-graph.sh  generate-pool-memleak-test-report.nix  generate-pool-memleak-test-report.sh  generate-reports.sh  generate-test-coverage-report.nix  generate-test-coverage-report.sh  generate-test-profiling-report.nix  generate-test-profiling-report.sh  hie.yaml  messagebox-memleak-test.nix  pool-memleak-test.nix  shell.nix  test.nix  unbounded-chan.bench  unliftio-messagebox.cabal  unliftio-protocols-test.tix  unliftio-protocols.cabal
.github/workflows/: test.yml
benchmark-results/: benchmark-1-CORES.html  benchmark-2-CORES.html  benchmark-4-CORES.html  benchmark-ALL-CORES.html  benchmark-bounded-vs-unbounded-N1.html  benchmark-bounded-vs-unbounded.html  benchmark-command-based-on-TVar.html  benchmark-extensible-effects-concurrent.html  benchmark.html  optimistic-vs-pessimistic.html
benchmarks/: Main.hs
generated-reports/benchmark-report/: benchmark-1-CORES.html  benchmark-ALL-CORES.html
generated-reports/haddock-report/unliftio-messagebox/: UnliftIO-MessageBox-Broker.html  UnliftIO-MessageBox-CatchAll.html  UnliftIO-MessageBox-Class.html  UnliftIO-MessageBox-Command.html  UnliftIO-MessageBox-Limited.html  UnliftIO-MessageBox-Pool.html  UnliftIO-MessageBox-Unlimited.html  UnliftIO-MessageBox-Util-CallId.html  UnliftIO-MessageBox-Util-Fresh.html  UnliftIO-MessageBox-Util-Future.html  UnliftIO-MessageBox.html  doc-index.html  index.html  unliftio-messagebox.haddock
generated-reports/memleak-test-report/: unliftio-messagebox-memleak-test.hp  unliftio-messagebox-memleak-test.prof
generated-reports/messagebox-memleak-test-report/: unliftio-messagebox-memleak-test.prof
generated-reports/module-graph/: module-graph.dot
generated-reports/pool-memleak-test-report/: unliftio-pool-memleak-test.prof
generated-reports/test-coverage-report/: hpc_index.html  hpc_index_alt.html  hpc_index_fun.html
generated-reports/test-coverage-report/unliftio-messagebox-0.1.0-G9tthjEDr9cEDRzmlvqrR9/: UnliftIO.MessageBox.Class.hs.html
generated-reports/test-coverage-report/unliftio-messagebox-1.0.2-Hvz2O1j5rzmfB8k4nsNvG/: UnliftIO.MessageBox.CatchAll.hs.html  UnliftIO.MessageBox.Class.hs.html
generated-reports/test-coverage-report/unliftio-messagebox-2.0.0-A4pn2VW4d3uBaU2iNirqNf/: UnliftIO.MessageBox.Class.hs.html  UnliftIO.MessageBox.Command.hs.html
generated-reports/test-coverage-report/unliftio-messagebox-2.0.1-JsU32ZnoW8SKzR9n8pdsrr/: UnliftIO.MessageBox.Util.Future.hs.html
generated-reports/test-coverage-report/unliftio-messagebox-2.1.0-8STxdpZGbSJ3KTzBw0TPDs/: UnliftIO.MessageBox.Pool.hs.html
generated-reports/test-coverage-report/unliftio-messagebox-test/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
generated-reports/test-coverage-report/unliftio-messagebox-test/unliftio-messagebox-0.1.0-G9tthjEDr9cEDRzmlvqrR9/: UnliftIO.MessageBox.Limited.hs.html  UnliftIO.MessageBox.Util.Fresh.hs.html  UnliftIO.MessageBox.Util.Future.hs.html
generated-reports/test-coverage-report/unliftio-messagebox-test/unliftio-messagebox-1.0.2-Hvz2O1j5rzmfB8k4nsNvG/: UnliftIO.MessageBox.Unlimited.hs.html
generated-reports/test-coverage-report/unliftio-messagebox-test/unliftio-messagebox-2.0.0-A4pn2VW4d3uBaU2iNirqNf/: UnliftIO.MessageBox.CatchAll.hs.html  UnliftIO.MessageBox.Class.hs.html  UnliftIO.MessageBox.Limited.hs.html  UnliftIO.MessageBox.Util.CallId.hs.html  UnliftIO.MessageBox.Util.Fresh.hs.html
generated-reports/test-coverage-report/unliftio-messagebox-test/unliftio-messagebox-2.0.1-JsU32ZnoW8SKzR9n8pdsrr/: UnliftIO.MessageBox.Broker.hs.html  UnliftIO.MessageBox.Unlimited.hs.html
generated-reports/test-profiling-report/: test-result.html  unliftio-messagebox-test.html  unliftio-messagebox-test.prof
nix/: overlay.nix  pkgs.nix  sources.json
old-benchmark-report/: benchmark-bounded-vs-unbounded-N1.html  benchmark-command-based-on-MVar.html
src/: Protocol.hs  Protocols.hs
src-benchmark/: BookStoreBenchmark.hs  CommandBenchmark.hs  Main.hs  MediaBenchmark.hs  PoolBenchmark.hs  uni_msg_passing.erl
src-memleak-test/: Main.hs  MediaBenchmark.hs
src-pool-memleak-test/: Main.hs
src-test/: BoundedMessageBoxTest.hs  BrokerTest.hs  CallIdTest.hs  CatchAllTest.hs  ClosableMessageBoxTest.hs  CommandTest.hs  CornerCaseTests.hs  FreshTest.hs  GoodConcurrencyTest.hs  GoodConcurrencyTests.hs  LimitedMessageBoxTest.hs  Main.hs  MessageBoxClassTest.hs  MessageBoxCommon.hs  MessageBoxTest.hs  MessageBoxTests.hs  PoolTest.hs  ProtocolsTest.hs  QCOrphans.hs  SimplerMessageBoxTest.hs  UnboundedMessageBoxTest.hs  UnlimitedMessageBoxTest.hs  Utils.hs
src/Protocol/: BoundedMessageBox.hs  ClosableMessageBox.hs  Command.hs  Fresh.hs  Future.hs  LimitedMessageBox.hs  MessageBox.hs  MessageBoxClass.hs  MessageBoxClosable.hs  MessageBoxSimpler.hs  UnboundedMessageBox.hs  UnlimitedMessageBox.hs  WeakThreadId.hs
src/Protocol/Command/: CallId.hs
src/Protocol/MessageBox/: CatchAll.hs  Class.hs  Limited.hs  Unlimited.hs
src/Protocols/: Fork.hs  Fresh.hs  MessageBox.hs  Protocols.UniqueCallIds.hs  UniqueCallIds.hs
src/UnliftIO/: MessageBox.hs
src/UnliftIO/MessageBox/: Broker.hs  CatchAll.hs  Class.hs  Command.hs  Limited.hs  Pool.hs  Unlimited.hs
src/UnliftIO/MessageBox/Util/: CallId.hs  Fresh.hs  Future.hs
tests/: FreshTests.hs  GoodConcurrency.hs  GoodConcurrencyTests.hs  MessageBoxTests.hs  ProtocolsTests.hs  Test.hs  UniqueCallIdsTests.hs
(+1 files in other folders)
