cabal-version:  3.0
name:           unliftio-messagebox
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/sheyll/unliftio-messagebox#readme>
synopsis:       Fork processes that receive and reply typed messages
homepage:       https://github.com/sheyll/unliftio-messagebox#readme
bug-reports:    https://github.com/sheyll/unliftio-messagebox/issues
author:         Sven Heyll
maintainer:     sven.heyll@gmail.com
category:       Concurrency, Control, Effect
tested-with:    GHC==8.10.2,GHC==8.10.3
copyright:      Copyright Sven Heyll
license:        BSD-2-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    nix/sources.json
    nix/sources.nix
    nix/pkgs.nix
    nix/overlay.nix
    default.nix
    shell.nix
    ChangeLog.md
    README.md
    .travis.yml

source-repository head
  type: git
  location: https://github.com/sheyll/unliftio-messagebox

common compiler-flags-executables
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wpartial-fields
    -Wmissing-deriving-strategies
    -funbox-strict-fields
    -threaded
    -Wno-missing-signatures 
    -O2
    "-with-rtsopts=-T -N -qa"
    -- -Werror
  ghc-prof-options: 
    -fprof-auto 
    "-with-rtsopts=-T -xt -xc -Pa -hc -L256"
  
common compiler-flags
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wpartial-fields
    -Wmissing-deriving-strategies
    -funbox-strict-fields
    -O2
    -- -Werror
  default-extensions:
     AllowAmbiguousTypes,
     BangPatterns,
     BinaryLiterals,
     ConstraintKinds,
     DataKinds,
     DefaultSignatures,
     DeriveFoldable,
     DeriveFunctor,
     DeriveGeneric,
     DeriveTraversable,
     DerivingStrategies,
     -- DoIfThenElse,
     ExistentialQuantification,
     FlexibleContexts,
     FlexibleInstances,
     FunctionalDependencies,
     GADTs,
     GeneralizedNewtypeDeriving,
     InstanceSigs,
     LambdaCase,
     MultiParamTypeClasses,
     MultiWayIf,
     NamedFieldPuns,     
     NumericUnderscores,
     OverloadedStrings,
     -- PartialTypeSignature,
     PatternGuards,
     PolyKinds,
     RankNTypes,
     RecordWildCards,
     ScopedTypeVariables,
     StandaloneDeriving,
     StrictData,
     TupleSections,
     TypeApplications,
     TypeFamilies,
     TypeInType,
     TypeOperators,
     TypeSynonymInstances,
     ViewPatterns
  other-extensions:
    CPP,
    DeriveAnyClass,
    DeriveLift,
    ForeignFunctionInterface,
    ImplicitParams,
    MagicHash,
    PackageImports,
    QuasiQuotes,
    StaticPointers,
    StrictData,
    Strict,
    TemplateHaskell,
    TypeOperators,
    UnboxedTuples,
    UndecidableInstances,
    UnliftedFFITypes
  default-language: Haskell2010

common deps
  build-depends:
      atomic-primops,
      base >= 4.14 && <5,
      containers >=0.5.8 && <0.7,
      data-default >= 0.7 && < 0.8,
      hashable,
      mtl,
      QuickCheck,
      text,
      time,
      unagi-chan,
      unliftio

library
  import: deps, compiler-flags
  hs-source-dirs:
      src
  build-depends:
  exposed-modules:
    UnliftIO.MessageBox,
    UnliftIO.MessageBox.CatchAll,
    UnliftIO.MessageBox.Class,
    UnliftIO.MessageBox.Command,
    UnliftIO.MessageBox.Limited,
    UnliftIO.MessageBox.Unlimited,
    UnliftIO.MessageBox.Util.CallId,
    UnliftIO.MessageBox.Util.Fresh,
    UnliftIO.MessageBox.Util.Future
  other-modules:
  
-- executable unliftio-messagebox-example-1
--   import: deps, compiler-flags
--   main-is: Main.hs
--   hs-source-dirs: examples/example-1
--   build-depends: unliftio-messagebox
--   ghc-options: -threaded
--   ghc-prof-options: -fprof-auto "-with-rtsopts=-T -xt -Pa -hc -L256"
--   default-extensions:
--     OverloadedStrings
-- 

test-suite unliftio-messagebox-test
  import: deps, compiler-flags-executables
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: src-test
  other-modules:
    LimitedMessageBoxTest,    
    CallIdTest,
    CatchAllTest,
    CommandTest,    
    FreshTest,
    CornerCaseTests,
    MessageBoxClassTest,
    MessageBoxCommon,
    ProtocolsTest,
    QCOrphans,
    UnlimitedMessageBoxTest,
    Utils
  ghc-options: 
    -Wno-missing-signatures
    -Wno-missing-export-lists
    -Wno-type-defaults
    "-with-rtsopts=-N"
  build-depends:
    base,
    tasty,
    tasty-html,
    tasty-hunit,
    tasty-quickcheck,
    unliftio-messagebox,
    HUnit
              
benchmark unliftio-messagebox-bench
  import: deps, compiler-flags-executables
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    BookStoreBenchmark,
    CommandBenchmark,
    MediaBenchmark
  hs-source-dirs: src-benchmark
  ghc-options:  -Wno-missing-signatures 
  build-depends:
    unliftio-messagebox,
    criterion
